--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -5,7 +5,11 @@ on:
       - opened
       - closed
       - converted_to_draft
-  workflow_dispatch:
+    branches:    
+      - main
+  push:
+    branches:    
+      - main
 jobs:
   deploy:
     runs-on: ubuntu-latest
