Added event filters

--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -6,7 +6,7 @@ on:
       - closed
       - converted_to_draft
     branches:    
-      - master
+      - develop
   push:
     branches:    
       - master
